# herd-repo-github

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
herd_repo_github/: __init__.py  adapter.py
tests/: test_adapter.py
