[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-repo-github"
version = "0.1.0"
description = "Herd repository operations adapter for GitHub — implements RepoAdapter protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Faust Eriksen" }]
keywords = ["ai", "agents", "herd", "github", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["herd-core>=0.0.1"]

[project.urls]
Repository = "https://github.com/dbt-conceptual/herd-repo-github"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
